--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@iconify/vue": "^4.0.1",
     "core-js": "^3.8.3",
+    "node-fetch": "^3.3.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
